edit readme: add gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /Hasil-CSV/hasil_order-FIX.csv
 
 /Hasil-Fix-SQL/hasil-customer.sql
+/Hasil-Fix-SQL/hasil-order_details-FIX.sql
+/Hasil-Fix-SQL/hasil-order1.sql
