--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@
 /Hasil-Fix-SQL/hasil-customer.sql
 /Hasil-Fix-SQL/hasil-order_details-FIX.sql
 /Hasil-Fix-SQL/hasil-order1.sql
+
+/Hasil-Fix-CSV/hasil_order.csv
+/Hasil-Fix-CSV/hasil-customer.csv
