--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /Hasil-SQL/hasil-order1.sql
 /Hasil-SQL/hasil-order2.sql
 /Hasil-SQL/hasil-order3.sql
+/Hasil-SQL/hasil-order.sql
 
 /Hasil-CSV/hasil_order-FIX.csv
 
